# cookbook

./: LICENSE  README.MD
.scorable/evaluators/: competitor-mention-policy.yaml
crm-pipe/: .gitignore  README.md  index.html  package-lock.json  package.json  skills-lock.json  test-pipeline.html  vite.config.js
crm-pipe/.agents/skills/scorable-integration/: SKILL.md
crm-pipe/.agents/skills/scorable-otel-evaluation/: SKILL.md
crm-pipe/.agents/skills/scorable-otel-evaluation/references/: python-instrumentation.md  typescript-instrumentation.md
crm-pipe/.claude/skills/: scorable-otel-evaluation
crm-pipe/scripts/: headless-test.mjs
crm-pipe/server/: sqlite-server.mjs
crm-pipe/src/: App.jsx  styles.css
crm-pipe/src/lib/: llmClient.js  pipeline.js  sqlExecutor.js
legal-summarizer/: .gitignore  README.md  agent.py  evaluate_with_otel.py  evaluate_with_sdk.py  pyproject.toml  tracing.py
legal-summarizer/src/legal_summarizer/: __init__.py  agent.py  render.py  run.py
notebooks/: eval_simpleqa_scorable.ipynb
poker-app/: .gitignore  README.MD  poker.py  poker_data.py  poker_db.py  pyproject.toml
rag-example/src/: rag.py  scorable_evals.py
rag_example/: README.md  pyproject.toml
rag_example/src/: scorable_evals.py  test_vibe_evals.py
reports/: evaluation_agents.md
