[project]
name = "legal-summarizer"
version = "0.1.0"
description = "Pydantic AI agent that fetches a company's legal documents and summarizes them, scored by Scorable's Faithfulness_to_Citations evaluator."
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-ai-slim[openai,web-fetch]>=1.106.0",
    "scorable>=1.11.0",
]

[project.scripts]
legal-summarizer = "legal_summarizer.run:main"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["src/**/*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_summarizer"]
