[project]
name = "legal-summarizer"
version = "0.1.0"
description = "Pydantic AI agent that summarizes a company's legal documents, with two examples of scoring it via Scorable: the SDK (in-process) and OpenTelemetry traces (server-side)."
requires-python = ">=3.14"
dependencies = [
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "pydantic>=2.13.4",
    "pydantic-ai-slim[openai,web-fetch]>=1.106.0",
    "scorable>=1.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.14"
