[project]
name = "rag-example"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai-slim[openai]>=1.74.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "scorable>=0.1.0",
    "pytest>=8.0.0",
    "anyio[trio]>=4.0.0",
    "pytest-anyio>=0.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
